// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`free-response widget should snapshot on mobile: first mobile render 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        class="paragraph"
      >
        <div
          class="perseus-widget-container widget-nohighlight widget-block"
        >
          <div
            class="default_xu2jcg-o_O-container_lci7r free-response"
          >
            <div
              class="default_xu2jcg"
            >
              <div
                class="default_xu2jcg-o_O-labelContainer_1qlbwdv"
              >
                <label
                  class="text_f1191h-o_O-BodyText_1xtvlx3-o_O-BodyTextMediumSemiWeight_w58hss-o_O-label_1r6q8ju-o_O-labelWithNoDescription_i032sc"
                  for=":r2:-labeled-field-field"
                  id=":r2:-labeled-field-label"
                >
                  <div
                    class="default_xu2jcg free-response-question"
                  >
                    <div
                      class="perseus-renderer perseus-renderer-responsive"
                    >
                      <div
                        class="paragraph"
                        data-perseus-paragraph-index="0"
                      >
                        <div
                          class="paragraph"
                        >
                          test-question
                        </div>
                      </div>
                    </div>
                  </div>
                </label>
              </div>
              <div
                class="default_xu2jcg-o_O-inlineStyles_zdxht7"
              >
                <textarea
                  aria-describedby=":r2:-labeled-field-additional-helper-message"
                  aria-invalid="false"
                  aria-required="false"
                  class="textarea_8jhb0l-o_O-BodyTextMediumMediumWeight_ijclyr-o_O-default_8fhii8-o_O-textarea_1x0fg6n-o_O-inlineStyles_sdsn9f"
                  id=":r2:-labeled-field-field"
                  placeholder="test-placeholder"
                />
              </div>
              <div
                class="text_f1191h-o_O-BodyText_1xtvlx3-o_O-BodyTextMediumMediumWeight_ijclyr-o_O-helperText_1lvpu48-o_O-spacingAboveHelperText_gnlkey"
                id=":r2:-labeled-field-additional-helper-message"
              >
                <p
                  class="characterCountText_10dqadd"
                >
                  0 / 500 Characters
                </p>
              </div>
              <div
                aria-atomic="true"
                aria-live="assertive"
                class="default_xu2jcg-o_O-helperTextWithIcon_1hmzxfl"
                id=":r2:-labeled-field-error"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`free-response widget should snapshot: first render 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        class="paragraph"
      >
        <div
          class="perseus-widget-container widget-nohighlight widget-block"
        >
          <div
            class="default_xu2jcg-o_O-container_lci7r free-response"
          >
            <div
              class="default_xu2jcg"
            >
              <div
                class="default_xu2jcg-o_O-labelContainer_1qlbwdv"
              >
                <label
                  class="text_f1191h-o_O-BodyText_1xtvlx3-o_O-BodyTextMediumSemiWeight_w58hss-o_O-label_1r6q8ju-o_O-labelWithNoDescription_i032sc"
                  for=":r0:-labeled-field-field"
                  id=":r0:-labeled-field-label"
                >
                  <div
                    class="default_xu2jcg free-response-question"
                  >
                    <div
                      class="perseus-renderer perseus-renderer-responsive"
                    >
                      <div
                        class="paragraph"
                        data-perseus-paragraph-index="0"
                      >
                        <div
                          class="paragraph"
                        >
                          test-question
                        </div>
                      </div>
                    </div>
                  </div>
                </label>
              </div>
              <div
                class="default_xu2jcg-o_O-inlineStyles_zdxht7"
              >
                <textarea
                  aria-describedby=":r0:-labeled-field-additional-helper-message"
                  aria-invalid="false"
                  aria-required="false"
                  class="textarea_8jhb0l-o_O-BodyTextMediumMediumWeight_ijclyr-o_O-default_8fhii8-o_O-textarea_1x0fg6n-o_O-inlineStyles_sdsn9f"
                  id=":r0:-labeled-field-field"
                  placeholder="test-placeholder"
                />
              </div>
              <div
                class="text_f1191h-o_O-BodyText_1xtvlx3-o_O-BodyTextMediumMediumWeight_ijclyr-o_O-helperText_1lvpu48-o_O-spacingAboveHelperText_gnlkey"
                id=":r0:-labeled-field-additional-helper-message"
              >
                <p
                  class="characterCountText_10dqadd"
                >
                  0 / 500 Characters
                </p>
              </div>
              <div
                aria-atomic="true"
                aria-live="assertive"
                class="default_xu2jcg-o_O-helperTextWithIcon_1hmzxfl"
                id=":r0:-labeled-field-error"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
